# DoodleJump

./: CMakeLists.txt  README.md  conanfile.txt  config.h.in  main.cpp
include/: background.h  cloud.h  coin.h  command.h  earth.h  entity.h  game.h  grass.h  ice.h  input_handler.h  landscape.h  life.h  life_board.h  observer.h  plat.h  platform.h  player.h  resource_holder.h  resource_holder.inl  resource_manager.h  score_board.h  spawner.h  starting_point.h  stone.h  subject.h
include/entity/: background.h  cloud.h  coin.h  earth.h  entity.h  grass.h  ice.h  life.h  observer.h  platform.h  player.h  starting_point.h  stone.h
src/: background.cpp  cloud.cpp  coin.cpp  command.cpp  earth.cpp  entity.cpp  game.cpp  grass.cpp  ice.cpp  input_handler.cpp  landscape.cpp  life.cpp  life_board.cpp  main.cpp  plat.cpp  platform.cpp  player.cpp  resource_manager.cpp  score_board.cpp  starting_point.cpp  stone.cpp  subject.cpp
src/entity/: background.cpp  cloud.cpp  coin.cpp  earth.cpp  entity.cpp  grass.cpp  ice.cpp  life.cpp  platform.cpp  player.cpp  starting_point.cpp  stone.cpp
